--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#projects">Projects</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -64,23 +63,24 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Career Objective:-</h3>
           <p class="fst-italic">
-            Seeking a challenging and dynamic position with a growing firm to add some value for the better 
-            growth and profit of the organization along with developing my knowledge and skills.
+            I would like to turn out to be software professional where, I can work as a team 
+            member and to secure a position where I can efficiently contribute my skills and 
+            abilities to the growth of the organization and make my professional career.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>18 October 1992</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+917815911423</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+918105294916</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Andhra Pradesh, INDIA</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master (MBA)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamalakar.mrp@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamalakar.atp@gmail.com</span></li>
               </ul>
             </div>
           </div>
@@ -108,20 +108,13 @@
               <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
-          <div class="progress">
-            <span class="skill">Devops Tools <i class="val">60%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div> </br>
           <div class="section-title">
             <h2>Technical Skills</h2>
           </div>
           <div class="row skills-content"> 
           <div>
             <h5 style="color:rgb(0, 170, 255)">Operating Systems :</h5>RHEL, Cent OS, Ubuntu and Windows.
-            <h5 style="color:rgb(0, 170, 255)">AWS (Cloud Technology) :</h5>EC2, VPC, S3, IAM, SES, SNS, Cloud Watch, EBS, EFS, Elastic Load Balancer, Auto Scaling, RDS, Dynamo DB, AWS CLI, Cloud Trail, Cloud Front, Route53, Glacier.
-            <h5 style="color:rgb(0, 170, 255)">DevOps Tools :</h5> GIT, Docker, Ansible, Jenkins, Maven, Terraform, SonarQube, Nexus Cloud Watch, and Kubernetes.
+            <h5 style="color:rgb(0, 170, 255)">AWS (Cloud Technology) :</h5>EC2, VPC, S3, IAM, SNS, Cloud Watch, EBS, Elastic Load Balancer, Auto Scaling, RDS, Dynamo DB, AWS CLI, Route53.
             <h5 style="color:rgb(0, 170, 255)">Linux :</h5> Cron job, Enhanced user security with Sudo privileges, back up & restore (tar and gzip), Deploy automation.
             <h5 style="color:rgb(0, 170, 255)">Servers :</h5> Web Server and Tomcat server.
             <h5 style="color:rgb(0, 170, 255)">Languages :</h5> HCL, YAML & Shell Scripting (basic).
@@ -141,84 +134,28 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item">
             <h4>Kamalakar.B</h4>
-            <p>I am an experienced DevOps engineer with a passion for automating workflows and optimizing processes. I have four years of experience working in this field and I understand the delicate balance between operations and development. I am able to quickly 
-              deliver code to customers without compromising quality.
-              </p>
-              •	I am an experienced DevOps engineer with a passion for automating workflows and optimizing processes. I have three years of experience working in this field and I understand the delicate balance between operations and development. I am able to quickly deliver code to customers without compromising quality.</br>
-              •	I have extensive experience working with GIT (Distributed Version Control tool), Ansible (Configuration Management Tools), Terraform (Infrastructure as a code), Docker (Container Based Tool), Jenkins (Continuous Integration Tool), Maven (Build Tool), Nexus (Build Artifacts), Sonar Qube (Code Quality Checking), Cloud Watch (Monitoring Tool), and Kubernetes (Container Orchestration Tool).</br>
-              •	I have experience with a wide variety of AWS services, including but not limited to EC2 (Elastic Compute Cloud), S3 (Simple Storage Service), IAM (Identity Access Management), SNS (Simple Notification Service), VPC (Virtual Private Cloud), SES (Simple Email Service), Cloud Watch, EFS (Elastic File System), Elastic Load Balancer (Classic/Application), Route53, Auto Scaling in launching EC2 instances, RDS, AWS CLI (Command Line Interface),Cloud Front, and DB Snapshots. I am confident in my ability to utilize these tools to build and deploy applications that meet your needs.</br>
-              •	Having hands on experience in Basic Linux commands.</br>
-              •	Having good working experience in Job Automation (Cron Job), Enhanced User Security with SUDO, Backup & Restore (tar and gzip).</br>
-              •	Responsible for all tools configurations and coordinating with the teams.</br>
-              •	Strong and effective inter-personal skills and communication skills, ability to interact with clients and team members.</br>
-              •	Commitment, result oriented, and Zeal to learn new technologies and undertake challenging tasks.</br>
-              •	Assisting with the peers for any clarifications both in technical and functional in the system to deliver the product within the timeliness.</br>
-              •	Involved in reviewing the tasks functionally and technically to improve the accuracy and minimizing the rework effort.</br>
-              •	Reporting to the all stakeholders about the daily status of the assigned task including client.</br>
-              •	Involved in exploration of new technologies and sharing the knowledge with the team internally.</br>
+            •	Supporting clients and providing round-the-clock production support in AWS and Linux environments.</br>
+            •	Knowledge on Amazon EC2, S3, IAM, ELB, Auto scaling, Cloud watch, SNS, Route 53, S3, RDS, Elastic beanstalk, Cloud formation.</br>
+            •	Designed cost-effective, fault-tolerant, and highly available systems using multiple AWS instances, security groups, Elastic Load Balancer (ELB) & AMIs, and auto-scaling.</br>
+            •	Created new accounts, roles, groups, and policies using IAM, Knowledge of cloud security technologies (VPC, Security Groups, etc.), cloud permission systems, and secure cloud configuration (Cloud Trail, AWS Config, etc) (IAM).</br>
+            •	Using cloud watch events to capture EBS volume snapshots.</br>
+            •	migrated a SQL server database to Amazon Web Services.</br>
+            •	updated the AMI with the most recent patches.</br>
+            •	Developed AWS Multi-Factor Authentication (MFA) for RDP/SSH logon, and collaborated with teams to secure security groups.</br>
+            •	Responsible for deploying SSL Certificates across AWS ELB.</br>
+            •	Monitor AWS EC2 & RDS instances from site 24x7 & new relic monitoring tool.</br>
+            •	Knowledge to co-ordinating the resolution of server issues with the Windows team, Application team, DBA team, and Backup team and providing recommendations.</br>
+            •	Maintenance, Job Scheduling and scheduling backup jobs using cron-tab.</br>
+            •	Experience configuring SSH in security group.</br>
+            •	Apt-Get and YUM Package Installation.</br>
+            •	Knowledge on frount end technologies. (HTML CSS Java Script & Bootstrap).  </br>
            </div>
+           <div>
+            <p><h5 style="color:rgb(0, 170, 255)">Environments:</h5>  EC2, VPC, IAM, S3, Route53, SNS, Linux and Cloud Watch.
+             </p>
+            </div>
           </div>         
   </section><!-- End Resume Section -->
-  <!-- ======= Projects Section ======= -->
-  <section id="projects" class="projects">
-    <div class="container">
-        <h2>Projects:</h2></br>
-        <p><h5 style="color:rgb(0, 170, 255)">Project # 2:</h5>
-          <h5 style="color:rgb(0, 170, 255)">Company: TCS </h5>
-          <h5 style="color:rgb(0, 170, 255)">Period: January 2022 to till date </h5>
-          <h5 style="color:rgb(0, 170, 255)">Designation: DevOps Engineer.</h5>
-          <h5 style="color:rgb(0, 170, 255)">Responsibilities:</h5>
-          •	We have taken lead in migration process of servers & data from on-premises data centre to AWS Cloud  Responsible for complete administration of Cloud Infrastructure in my organization.</br>
-          •	Created VPC from the scratch, defined IP ranges in VPC to have better control over VPC.</br>
-          •	Created Public and Private Subnets for proper segregation of web servers and database servers to provide high level security.  </br>
-          •	Migrated all the object storage to S3 Buckets and Created IAM role with S3 full access and attached to EC2s to access data without credentials. </br> 
-          •	Mounted EFS (Elastic File System) with EC2s to have one common storage.</br>
-          •	Configured all in Auto Scaling Groups and Launch Configurations.</br>
-          •	Launched Web servers in public SNs through Auto scaling and connected to load balancer.</br>
-          •	Provided network to public SNs through Internet Gateways and Route tables.</br>
-          •	Launched DB servers in Private SNs and provided internet through NAT server in a secured manner.  </br>
-          •	Opened MYSQL port in database servers to all the public subnets.</br>
-          •	Assigned Load balancers difficult DNS name to ROUTE53’s user friendly domain name.</br>
-          •	Enabled NACLs (Network Access Control Lists) at both public and private subnet levels to restrict and to allow Ports in providing high security. </br>
-          •	 Installed and configured Jenkins in both windows and in Linux machine.</br>
-          •	Installed and configured java as pre-requisite to install Jenkins and Integrated many tools with Jenkins like Git, Maven/Ant, Tomcat web-servers.  </br>
-          •	Configured build tools like Maven/Ant and Integrated with Jenkins.</br>
-          •	Established complete pipeline workflow starting from pulling source code from git repository till deploying end-product into Tomcat server.  </br>
-          •	Established complete Jenkins CI-CD pipeline and automated complete workflow of build and delivery pipeline. </br>
-          
-        <h5 style="color:rgb(0, 170, 255)">Environments:- </h5>
-          VPC, EC2, Subnets, Gateways, Route Tables, IAM, S3, Web server, Database Server, 
-          SNS, Route53, Load Balancers, Auto scaling MYSQL, NAT, Linux, Git, GitHub, Jenkins, Tomcat server, 
-          Docker, Deploy to container & Build pipeline.</p>
-        </div>
-        <div class="container">
-          <p><h5 style="color:rgb(0, 170, 255)">Project # 1:</h5>
-            <h5 style="color:rgb(0, 170, 255)">Company: TCS </h5>
-            <h5 style="color:rgb(0, 170, 255)">Period: January 2021 to January 2022 </h5>
-            <h5 style="color:rgb(0, 170, 255)">Technology Stack: AWS Cloud & DevOps</h5>
-            <h5 style="color:rgb(0, 170, 255)">Responsibilities:</h5>
-          <p>
-              •	I used to be managing tasks in both AWS and DevOps.</br>
-              •	Having complete hands on experience in launching EC2s and configuring auto scaling with web servers to provide high availability to data.</br>
-              •	Extensively worked with IAM user and group accounts with limited privileges to individual users as well as groups in the process of maintaining less expenditure and high security.</br>
-              •	Well versed in IAM roles, enabling multifactor authentication, and aware of all password policies.</br>
-              •	Having hands on experience in S3 bucket like ACLs, enabled versioning at bucket level to recover objects and object-lock to protect objects from accidental deletion.</br>
-              •	Extensively used transfer acceleration in the process of migration of data to S3 bucket.</br>
-              •	Worked with Route53 like purchasing domain names from AWS as well as from other websites.</br>
-              •	Created record sets to assign load balancer’s difficult DNS name with user friendly domain name.</br>
-              •	Integrated SNS at auto scaling level and Route53’s level to get notifications.</br>
-              •	Worked with Chef Cookbooks and Chef Recipes to automate infrastructure as a code (IAC).</br>
-              •	Good experience in all kinds of docker instructions in docker file.</br>
-              •	Extensively Worked with Docker images like pulling images from docker hub, creating images from docker file, also from docker containers.</br>
-              •	Well experienced in creating containers from docker images as well as from our own images.</br>
-              •	Experienced with volume mappings and port mappings.</br>
-              •	Setting up of docker registry server.</br>
-              •	I extensively used the Cloud Watch monitoring service to monitor many things and configure cloud watch alarms to take necessary actions whenever required. This helped me maintain high availability by reducing downtime.</br>
-
-              <h5 style="color:rgb(0, 170, 255)">Environments:</h5>  EC2, IAM, S3, Route53, SNS, Linux, Chef, Docker, and Cloud Watch.
-          </p>
-        </div>
-  </section><!-- End Projects Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
@@ -254,14 +191,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>kamalakar.mrp@gmail.com</p>
+            <p>kamalakar.atp@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 7815911423</p>
+            <p>+91 8105294916</p>
           </div>
         </div>
       </div>
